Fix by hexlet check action